--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ server.port=5000
 spring.application.name=wealthwise-backend
 
 # Database - PostgreSQL
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/wealthwise_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://pg-1a3cd3ca-kishankumar132805-a5d6.j.aivencloud.com:26040/defaultdb?sslmode=require}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:avnadmin}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
